tests/baselines/reference/APILibCheck(exactoptionalpropertytypes=true).errors.txt
typescript.internal.d.ts(3913,24): error TS2420: Class 'Project' incorrectly implements interface 'LanguageServiceHost'.
  Types of property 'createHash' are incompatible.
    Type '((data: string) => string) | undefined' is not assignable to type '(data: string) => string'.
      Type 'undefined' is not assignable to type '(data: string) => string'.


==== index.ts (0 errors) ====
    import ts = require("typescript");
    import tsInternal = require("typescript-internal");
    import tsserverlibrary = require("tsserverlibrary");
    import tsserverlibraryInternal = require("tsserverlibrary-internal");
    
==== node_modules/typescript/package.json (0 errors) ====
    {
        "name": "typescript",
        "types": "/.ts/typescript.d.ts"
    }
    
==== node_modules/typescript-internal/package.json (0 errors) ====
    {
        "name": "typescript-internal",
        "types": "/.ts/typescript.internal.d.ts"
    }
    
==== node_modules/tsserverlibrary/package.json (0 errors) ====
    {
        "name": "tsserverlibrary",
        "types": "/.ts/tsserverlibrary.d.ts"
    }
    
==== node_modules/tsserverlibrary-internal/package.json (0 errors) ====
    {
        "name": "tsserverlibrary-internal",
        "types": "/.ts/tsserverlibrary.internal.d.ts"
    }
    